[project]
name = "ryt"
version = "0.1.0"
description = "Ryt CLI and Server"
requires-python = "==3.12"
dependencies = [
    "websockets",
    "msgpack",
    "prompt_toolkit",
    "requests",
    "pyyaml",
    "watchdog",
    "rich"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
